# minimax_rust

./: .gitignore  Cargo.toml  Makefile.toml  TODO.md  readme.md
.github/workflows/: benchmark.yml  rust.yml  test.yml
benches/: minimax_bench.rs
game_frontend/: Cargo.toml
game_frontend/src/: tictactoe_plugin.rs
minimax/: Cargo.toml
minimax/benches/: minimax_bench.rs  minimax_bench_criterion.rs  minimax_bench_iai.rs
minimax/src/: connect4.rs  game.rs  lib.rs  minimax.rs  tictactoe.rs
src/: connect4.rs  game.rs  lib.rs  main.rs  minimax.rs  tictactoe.rs  tictactoe_plugin.rs
tree_visualizer/: Cargo.toml
tree_visualizer/src/: main.rs
