[package]
name = "minimax"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
rand = "0.8.5"
itertools = "0.10.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.1"

[dev-dependencies]
rstest = "0.16.0"
criterion = "0.4.0"

[[bench]]
name = "minimax_bench"
harness = false

# TODO compile times for different profiles are getting ridiculous. split into multiple workspaces

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3