[package]
name = "minimax"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
rand = "0.8.5"
itertools = "0.10.5"
tracing = "0.1.37"
derivative = "2.2.0"

[dev-dependencies]
rstest = "0.16.0"
criterion = "0.4.0"
iai = "0.1.1"
tracing-subscriber = "0.3.1" # probably not needed in a library

[[bench]]
name = "minimax_bench_criterion"
harness = false

[[bench]]
name = "minimax_bench_iai"
harness = false
